FreeST/test/Programs/InvalidTests/Linearity/forkLinExp/forkLinExp.fst
main : ()
main = fork @(!Int;Close, ?Int;Wait) (\_:() 1-> new @(!Int;Close) ())
